fix: overflow: hidden

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -56,7 +56,9 @@ $melonColor: #d09d31;
   }
 }
 
-
+#___gatsby {
+  overflow: hidden;
+}
 
 
 
